--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "test": "node main.js --test"
   },
   "author": "Holland Ninow",
   "license": "ISC",
@@ -18,5 +19,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.4"
+  },
+  "dependencies": {
+    "fs-extra": "^11.1.1"
   }
 }
