--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "archiver": "^5.3.1",
+    "dotenv": "^16.0.3",
     "fs-extra": "^11.1.1",
     "replace-in-file": "^6.3.5"
   }
