--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "archiver": "^5.3.1",
     "dotenv": "^16.0.3",
     "fs-extra": "^11.1.1",
+    "glob": "^9.3.4",
     "replace-in-file": "^6.3.5"
   }
 }
